<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:tag="SettingsFragment_tag"
    android:background="@color/med_gray" >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true" android:id="@+id/userLoggedInLayout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_not_logged_in"
        android:id="@+id/settingsLoggedInAs" android:layout_alignParentLeft="true" android:layout_marginLeft="16dp"
        android:layout_alignBaseline="@+id/logout_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button_text"
        android:id="@+id/logout_button" android:layout_alignParentRight="true" android:layout_alignParentTop="true"
        style="?android:attr/borderlessButtonStyle" android:layout_marginRight="16dp"/>
  </RelativeLayout>


  <TextView
        android:id="@+id/Settings_NotificationsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_notifications_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignLeft="@+id/userLoggedInLayout"
        android:layout_below="@+id/userLoggedInLayout"/>
  <CheckBox
      android:id="@+id/NotificationsSettingsRoomateFinishedChoreCheckbox"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/NotificationsSettingsRoomateFinishedChoreCheckbox"
      android:layout_below="@+id/Settings_NotificationsTitle"
      android:text="@string/notifications_settings_roomate_finished_chore" />
  <CheckBox
        android:id="@+id/NotificationsSettingRoomateMissedChoreCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Settings_NotificationsTitle"
        android:layout_below="@+id/NotificationsSettingsRoomateFinishedChoreCheckbox"
        android:text="@string/notifications_settings_roomate_missed_chore" />

  <CheckBox
        android:id="@+id/NotificationsSettingsRoomateStoleChoreCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NotificationsSettingsRoomateFinishedChoreCheckbox"
        android:layout_below="@+id/NotificationsSettingRoomateMissedChoreCheckbox"
        android:text="@string/notifications_settings_roomate_stole_chore" />

  <CheckBox
        android:id="@+id/ChoresSettingsForbidCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ChoresSettingsDisableRemindersCheckbox"
        android:layout_below="@+id/ChoresSettingsDisableRemindersCheckbox"
        android:text="@string/chores_settings_forbid" />

    <EditText
        android:id="@+id/RemindersHoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/RemindersSettingsHours"
        android:layout_alignLeft="@+id/RemindersTitle"
        android:layout_alignRight="@+id/ChoresTitle"
        android:ems="10" 
        android:hint="@string/settings_reminder_hours_before_hint"
        android:inputType="number"/>

    <CheckBox
        android:id="@+id/NotificationsSettingsNewChoresCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NotificationsSettingsRoomateStoleChoreCheckbox"
        android:layout_below="@+id/NotificationsSettingsRoomateStoleChoreCheckbox"
        android:text="@string/notifications_settings_new_chores" />

    <CheckBox
        android:id="@+id/ChoresSettingsDisableRemindersCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ChoresTitle"
        android:layout_below="@+id/ChoresTitle"
        android:text="@string/chores_settings_disable_reminders" />

  <TextView
        android:id="@+id/ChoresTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NotificationsSettingsNewChoresCheckbox"
        android:layout_below="@+id/NotificationsSettingsNewChoresCheckbox"
        android:layout_marginTop="43dp"
        android:text="@string/chores_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/RemindersSettingsHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/RemindersTitle"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="5dp"
        android:layout_toLeftOf="@id/RemindersHoursText"
        android:text="@string/reminders_settings_hours"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/RemindersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ChoresSettingsForbidCheckbox"
        android:layout_below="@+id/ChoresSettingsForbidCheckbox"
        android:layout_marginTop="16dp"
        android:text="@string/reminders_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/SettingsFragment_saveButton"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/NotificationsSettingRoomateMissedChoreCheckbox"
        android:layout_below="@+id/RemindersSettingsHours"
        android:text="@string/settings_save_settings_button" />

</RelativeLayout>
</ScrollView>