<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Dialog"
    tools:context=".NewApartmentDialogFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_questions_margin"
            android:layout_marginTop="@dimen/dialog_questions_margin"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/newChoreDialogWhatPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_chore_dialog_what_text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/newChoreDialogWhatSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_questions_margin"
            android:layout_marginTop="@dimen/dialog_questions_margin" >

            <Spinner
                android:id="@+id/newChoreDialogHowManySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/new_chore_dialog_how_many_prompt" />

            <Spinner
                android:id="@+id/newChoreDialogEverySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/new_chore_dialog_every_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_questions_margin"
            android:layout_marginTop="@dimen/dialog_questions_margin" >

            <TextView
                android:id="@+id/newChoreDialog_CoinsText_beforeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.41"
                android:gravity="center"
                android:text="@string/new_chore_before_coins_spinner"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/newChoreDialogValueSpinner"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:prompt="@string/new_chore_dialog_value_prompt" />

            <TextView
                android:id="@+id/newChoreDialogCoinsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_chore_dialog_coins_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_questions_margin"
            android:layout_marginTop="@dimen/dialog_questions_margin"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/newChoreDialogEveryoneCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_chore_dialog_everyone_checkbox_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            style="?android:attr/buttonBarStyle" >

            <Button
                android:id="@+id/newChoreDialogCreateButton"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_chore_dialog_create_button_text"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/newChoreDialogCancelButton"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_chore_dialog_cancel_button_text"           
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
