<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/LoginFragment_appTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/login_app_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/login_username_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/LoginFragment_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/text_box_frame"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="text" />

    <TextView
        android:id="@+id/LoginFragment_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/login_password_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/LoginFragment_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
   		android:inputType="textPassword"
        android:ems="10" 
        android:gravity="center_horizontal"
        android:background="@drawable/text_box_frame"/>

    <TextView
        android:id="@+id/LoginFragment_password_verify_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_password_verify_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible"
        android:enabled="false" />

    <EditText
        android:id="@+id/LoginFragment_password_verify"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/text_box_frame"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:visibility="invisible"
        android:enabled="false"  />

    <TextView
        android:id="@+id/LoginFragment_badPasswordMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_bad_password_msg"
        android:layout_marginLeft="40dp"
 		android:textColor="@color/red"
 		android:singleLine="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible"
        android:enabled="false"  />

    <TextView
        android:id="@+id/loginFragmentPhoneMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp"
        android:text="@string/login_ask_for_phone_msg"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/loginFragmentPhoneEdit"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp"
        android:editable="true"
        android:enabled="true"
        android:inputType="phone"
        android:singleLine="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/loginFragment_loginButton"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/login_login_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/LoginFragment_changeScreenPurposeText"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:text="@string/login_want_signup_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/LoginFragment_changeScreenPurposeButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:background="@android:color/white"
            android:text="@string/login_signup_button" />

    </LinearLayout>

  </LinearLayout>
</ScrollView>