<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/apartment_title_height" >

        <Button
            android:id="@+id/myChoresRowEditButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/apartment_editChoresButton"
            android:textSize="@dimen/apartment_buttons_textSize" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/apartment_inviteButton"
            android:textSize="@dimen/apartment_buttons_textSize" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/apartment_settingsButton"
            android:textSize="@dimen/apartment_buttons_textSize" />
    </LinearLayout>

    <TextView
        android:id="@+id/myChoresRowTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:layout_weight="0.08"
        android:gravity="center"
        android:text="@string/apartment_tableTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <ListView
        android:id="@+id/apartmentListChores"
        android:layout_width="match_parent"
        android:layout_height="@dimen/apartment_table__height"
        android:layout_gravity="top"
        android:layout_marginBottom="1dp"
        android:layout_weight="0.10" >

    </ListView>

    <Button
        android:id="@+id/historyButton"
        android:layout_width="322dp"
        android:layout_height="34dp"
        android:text="@string/apartment_historyButtoonText"
        android:textSize="@dimen/apartment_history_button_textSize"
        android:visibility="visible" />

</LinearLayout>